[gd_scene load_steps=2 format=3 uid="uid://l6vvj1hi72ps"]

[ext_resource type="Script" uid="uid://bn3ksf0ldj364" path="res://sceans/scean/parsonal.gd" id="1_pgr3y"]

[node name="parsonal" type="Panel"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 75.0
grow_horizontal = 2
script = ExtResource("1_pgr3y")

[node name="rank_label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 81.0
theme_override_font_sizes/font_size = 32
text = "1:"
vertical_alignment = 1

[node name="Player_name" type="Label" parent="."]
layout_mode = 0
offset_left = 87.0
offset_top = -1.0
offset_right = 262.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 25
text = "プレイヤー名"
vertical_alignment = 1

[node name="Time" type="Label" parent="."]
layout_mode = 0
offset_left = 349.0
offset_top = -2.0
offset_right = 605.0
offset_bottom = 79.0
theme_override_font_sizes/font_size = 32
text = "--:--.--"
vertical_alignment = 1

[node name="regulation" type="Label" parent="."]
layout_mode = 0
offset_left = 663.0
offset_top = -6.0
offset_right = 919.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 16
text = "アイテム :on
トラップ:off
暗闇     :off"
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 811.0
offset_top = 10.0
offset_right = 915.0
offset_bottom = 69.0
text = "迷路あり
セットを適応"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
